--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,7 @@
 <p>My name is {{name}} </p>
-<button class="btn btn-primary" [disabled] = '!allowNewServer' (click)="onServerCreation()">Add Server</button>
+
+<input type="text" class="form-control" (input)="onUpdateServerName($event)">
+
+<p>{{serverName}}</p>
+<button class="btn btn-primary" [disabled]='!allowNewServer' (click)="onServerCreation()">Add Server</button>
 <p>{{serverCreationStatus}}</p>
